--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
           name: Build-${{ matrix.targetPlatform }}-dev
           path: build/${{ matrix.targetPlatform }}
           overwrite: true
-      - if: ${{ !startsWith(github.ref, 'refs/tags/') }}
+      - if: ${{ !startsWith(github.ref, 'refs/tags/') && github.ref_name == 'main' }}
         name: Send discord webhook (dev only)
         uses: tsickert/discord-webhook@v6.0.0
         with:
